# Blind-Runner

./: .gitignore  README.md  ZaK-settings.txt  custom_ui.py  game.py  game_test.py  level.txt  main-test  main.py  new_game.py  nodes.py  nodes1.py  nodes2.py  pyproject.toml  test.py
BlindRunner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ZaKnode/: ZaK-settings.txt  __init__.py  __main__.py  base.py  modifiers.py  nodes.py  objects.py  plans.txt  resources.py  template.py
archiv/tests/txt_test/: read.py
archive/failed/: nodes1.py  test1_fail.py
archive/tests/: math_test.py  test.py
archive/tests/txt_test/: RAI.py  insert.py  level.txt  read.py
archive/ui_try/: custom_ui.py  ui_showcase.py
blindrunner/: ZaK-settings.txt  __main__.py  levels_backup.txt  test-levels.txt
blindrunner/ingame_levels/: level1.txt
blindrunner/lib/: __init__.py  dev_level_editor.py  level.py  levels.py  lib.py  menu.py
blindrunner/lib/scenes/: level.py  level_editor.py  levels.py  menu.py  settings.py
faled/: nodes1.py  test1_fail.py
joy/orbital-defender/: ZaK-settings.txt  game.py  game.spec  lib.py
joy/rotate_shooter/: __main__.py  lib.py
src/: new_game.py  nodes.py
src/ZaKgame/: __init__.py  base.py  modifiers.py  nodes.py  resources.py
src/faled/: test1_fail.py
tests/txt_test/: insert.py
txt_test/: delete.py
